# lab7

./: AverageScore.cpp  AverageScore.h  CMakeLists.txt  StudentFirstSession.cpp  StudentFirstSession.h  StudentSecondSession.cpp  StudentSecondSession.h  Students.cpp  Tests.cpp
lab7/: AverageScore.cpp  CMakeLists.txt  StudentFirstSession.cpp  StudentFirstSession.h  StudentSecondSession.cpp  StudentSecondSession.h  Students.h  main.cpp
